--- a/SVAF/OpenCV.Debug.x64.props
+++ b/SVAF/OpenCV.Debug.x64.props
@@ -7,6 +7,7 @@
     <ClCompile>
       <AdditionalIncludeDirectories>$(OPENCV_ROOT)\include;$(MATLAB_ROOT)\extern\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>GOOGLE_GLOG_DLL_DECL=;GLOG_NO_ABBREVIATED_SEVERITIES;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(OPENCV_ROOT)\x64\vc12\lib;$(MATLAB_ROOT)\extern\lib\win64\microsoft;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
